recursion.logo.lessons.recursion.logo.spiral.Spiral.scala.error
Spiral:2: error: reassignment to val
  if(steps=0){
          ^